2009-08-13  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdio/mktemp.c (mkdtemp): Fix typo in function name.

2009-08-12  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/mktemp.c (_gettemp): Do not call _mkdir_r unless
	HAVE_MKDIR is defined.

2009-08-12  Hans-Peter Nilsson  <hp@axis.com>

	* libc/include/reent.h: Add prototype and definition of _mkdir_r.
	* libc/reent/Makefile.am (GENERAL_SOURCES): Add mkdirr.c.
	(CHEWOUT_FILES): Add mkdirr.def.
	* libc/reent/Makefile.in: Regenerate.
	* libc/reent/mkdirr.c: New file.

2009-08-10  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdlib/wcstombs.c: Change documentation to specify size_t
	return type instead of int.

2009-07-29  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdlib/a64l.c: Fix to use 'a' instead of 'A' in calculation
	when a lower-case character is detected.

2009-07-29  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/mbtowc_r.c (__utf8_mbtowc): Rework UTF-16 surrogate
	pair handling to be more bullet-proof even with incomplete UTF-8
	sequences.  Add check for 4 byte sequences resulting in values
	outside the valid Unicode range.  Add a comment to clarify checking
	for invalid CESU-8 sequences.

2009-07-28  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/mbtowc_r.c (__utf8_mbtowc): Fix incrementing n in case
	of handling incomplete sequences.

2009-07-22  Eric Blake  <ebb9@byu.net>

	Avoid a fault from locking a closed standard file.
	* libc/stdio/fflush.c (_fflush_r): Give up early if stream has
	been previously closed.

2009-07-09  Craig Howland <howland@LGSInnovations.com>

	* libm/math/ef_scalb.c:  Replace isnanf() (pre-C99 function call) with
	isnan() (C99 macro).
	* libm/math/wf_log.c:  Ditto.
	* libm/math/wf_j0.c:  Ditto.
	* libm/math/wf_sqrt.c:  Ditto.
	* libm/math/wf_pow.c:  Ditto.
	* libm/math/wf_fmod.c:  Ditto.
	* libm/math/wf_remainder.c:  Ditto.
	* libm/math/wf_scalb.c:  Ditto.
	* libm/math/wf_atanh.c:  Ditto.
	* libm/math/wf_cosh.c:  Ditto.